--- a/index.html
+++ b/index.html
@@ -1,1 +1,117 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Daftar Makanan</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background-color: #f9f9f9;
+    }
+    h1 {
+      text-align: center;
+      color: #663399;
+    }
+    .menu {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+    .item {
+      background: white;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    .item img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+    .item h2 {
+      font-size: 18px;
+      margin: 10px 0 0 0;
+      color: #555;
+    }
+  </style>
+</head>
+<body>
 
+  <h1>Daftar Makanan</h1>
+
+  <div class="menu">
+    <div class="item">
+      <img src="https://files.catbox.moe/0sjrh2.jpg" alt="Mochi Bites">
+      <h2>Mochi Bites</h2>
+      <h3>HARGA : 8.000 </h3>
+      <h4>Keterangan :</h4>
+      <h5>Mochi Bites adalah cemilan mungil berbentuk bulat, kenyal, manis, dengan berbagai rasa seru yang bikin ketagihan setiap gigitan!</h5>
+    </div>
+    <div class="item">
+      <img src="https://files.catbox.moe/imfo0y.jpg" alt="Ubi Aroma">
+      <h2>Ubi Aroma</h2>
+      <h3>Harga : 8.000</h3>
+      <h4>Keterangan :</h4>
+      <h5>Ubi Aroma adalah camilan renyah berisi ubi manis, dibalut kulit tipis gurih, harum menggoda, cocok untuk teman santai!</h5>
+    </div>
+    <div class="item">
+      <img src="https://files.catbox.moe/iph8vi.jpg" alt="Mochi Daifuku">
+      <h2>Mochi Daifuku</h2>
+      <h2>Harga : 10.000</h2>
+      <h4>Keterangan :</h4>
+      <h5>Mochi Daifuku adalah kue Jepang lembut berbentuk bulat, berisi pasta kacang merah manis, kenyal, lezat, dan sangat menggoda!</h5>
+    </div>
+    <div class="item">
+      <img src="https://files.catbox.moe/n56fd8.jpg" alt="Puding Taro">
+      <h2>Puding Taro</h2>
+      <h3>Harga : 8.000</h3>
+      <h4>Keterangan :</h4>
+      <h5>Puding Taro adalah dessert lembut berwarna ungu, beraroma taro manis, creamy, segar, dan sempurna untuk pencuci mulut istimewa!</h5>
+      
+    </div>
+  </div>
+  
+  <title>Hubungi Kami</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 30px;
+      text-align: center;
+      background-color: #f0f8ff;
+    }
+    h2 {
+      color: #2c3e50;
+    }
+    .whatsapp-button {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 20px;
+      background-color: #25D366;
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+    .whatsapp-button:hover {
+      background-color: #1ebe57;
+    }
+  </style>
+</head>
+<body>
+
+  <h2>Hubungi Kami</h2>
+  <p>Jika ada pertanyaan atau ingin memesan, klik tombol di bawah untuk chat WhatsApp!</p>
+
+  <a class="whatsapp-button" href="https://wa.me/6283143513086 target="_blank">
+  Hubungi Kami Di Whatsapp
+    +62 831-4351-3086
+  </a>
+</body>
+
+</html>
